// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mount whole component with mocks 1`] = `
<App>
  <View
    className="App"
  >
    <div
      className="App"
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
        }
      }
    >
      <Todos
        data={
          Array [
            "item1",
            "item2",
          ]
        }
        loading={false}
        onAdd={[Function]}
        onRemove={[Function]}
      >
        <View
          className="App"
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(0,0,0,0.1)",
              "height": "100vh",
              "justifyContent": "center",
            }
          }
        >
          <div
            className="App"
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgba(0,0,0,0.1)",
                "display": "flex",
                "flexDirection": "column",
                "height": "100vh",
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderRadius": 6,
                  "boxShadow": "0px 0px 3px 3px rgba(0,0,0,0.1)",
                  "height": 600,
                }
              }
            >
              <div
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "white",
                    "borderRadius": 6,
                    "boxShadow": "0px 0px 3px 3px rgba(0,0,0,0.1)",
                    "display": "flex",
                    "flexDirection": "column",
                    "height": 600,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "flex-end",
                      "flexDirection": "row",
                      "padding": 20,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "alignItems": "flex-end",
                        "display": "flex",
                        "flexDirection": "row",
                        "padding": 20,
                      }
                    }
                  >
                    <Input
                      label="Todo"
                      onChange={[Function]}
                      style={
                        Object {
                          "width": 400,
                        }
                      }
                      value=""
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "flex-start",
                            "display": "flex",
                            "flexDirection": "column",
                          }
                        }
                      >
                        <div
                          style={
                            Object {
                              "alignItems": "flex-start",
                              "display": "flex",
                              "flexDirection": "column",
                            }
                          }
                        >
                          <Text
                            style={
                              Object {
                                "fontSize": 14,
                                "paddingBottom": 4,
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "color": "rgba(0,0,0,0.87)",
                                  "fontSize": 14,
                                  "paddingBottom": 4,
                                }
                              }
                            >
                              <div
                                style={
                                  Object {
                                    "color": "rgba(0,0,0,0.87)",
                                    "display": "flex",
                                    "flexDirection": "column",
                                    "fontSize": 14,
                                    "paddingBottom": 4,
                                  }
                                }
                              >
                                Todo
                              </div>
                            </View>
                          </Text>
                          <input
                            onChange={[Function]}
                            style={
                              Object {
                                "backgroundColor": "white",
                                "border": "solid 2px #9d9fa2",
                                "borderRadius": 4,
                                "fontSize": 24,
                                "height": 48,
                                "paddingLeft": 16,
                                "paddingRight": 16,
                                "width": 400,
                              }
                            }
                            value=""
                          />
                        </div>
                      </View>
                    </Input>
                    <Button
                      label="Add"
                      onClick={[Function]}
                      style={
                        Object {
                          "marginLeft": 20,
                          "width": 100,
                        }
                      }
                    >
                      <button
                        onClick={[Function]}
                        style={
                          Object {
                            "backgroundColor": "#017acd",
                            "borderRadius": 6,
                            "height": 54,
                            "marginLeft": 20,
                            "minWidth": 127,
                            "padding": 10,
                            "paddingLeft": 40,
                            "paddingRight": 40,
                            "width": 100,
                          }
                        }
                      >
                        <Text
                          style={
                            Object {
                              "color": "white",
                              "fontSize": 16,
                              "fontWeight": "bold",
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "color": "white",
                                "fontSize": 16,
                                "fontWeight": "bold",
                              }
                            }
                          >
                            <div
                              style={
                                Object {
                                  "color": "white",
                                  "display": "flex",
                                  "flexDirection": "column",
                                  "fontSize": 16,
                                  "fontWeight": "bold",
                                }
                              }
                            >
                              Add
                            </div>
                          </View>
                        </Text>
                      </button>
                    </Button>
                  </div>
                </View>
                <List
                  style={
                    Object {
                      "overflowY": "auto",
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flexDirection": "column",
                        "margin": 20,
                        "marginTop": 0,
                        "overflowY": "auto",
                        "width": "100%",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "display": "flex",
                          "flexDirection": "column",
                          "margin": 20,
                          "marginTop": 0,
                          "overflowY": "auto",
                          "width": "100%",
                        }
                      }
                    >
                      <ListItem
                        key="0"
                        onCancel={[Function]}
                      >
                        <View
                          className="ListItem"
                          style={
                            Object {
                              "alignItems": "center",
                              "borderRadius": 4,
                              "boxShadow": "0px 0px 3px 3px rgba(0,0,0,0.2)",
                              "flexDirection": "row",
                              "justifyContent": "space-between",
                              "margin": 20,
                              "marginBottom": 10,
                              "marginTop": 10,
                              "padding": 20,
                              "zIndex": 1,
                            }
                          }
                        >
                          <div
                            className="ListItem"
                            style={
                              Object {
                                "alignItems": "center",
                                "borderRadius": 4,
                                "boxShadow": "0px 0px 3px 3px rgba(0,0,0,0.2)",
                                "display": "flex",
                                "flexDirection": "row",
                                "justifyContent": "space-between",
                                "margin": 20,
                                "marginBottom": 10,
                                "marginTop": 10,
                                "padding": 20,
                                "zIndex": 1,
                              }
                            }
                          >
                            <Text>
                              <View
                                style={
                                  Object {
                                    "color": "rgba(0,0,0,0.87)",
                                    "fontSize": 16,
                                  }
                                }
                              >
                                <div
                                  style={
                                    Object {
                                      "color": "rgba(0,0,0,0.87)",
                                      "display": "flex",
                                      "flexDirection": "column",
                                      "fontSize": 16,
                                    }
                                  }
                                >
                                  item1
                                </div>
                              </View>
                            </Text>
                            <Text
                              className="cancelButton"
                              onClick={[Function]}
                              style={
                                Object {
                                  "cursor": "pointer",
                                  "marginLeft": 20,
                                }
                              }
                            >
                              <View
                                className="cancelButton"
                                onClick={[Function]}
                                style={
                                  Object {
                                    "color": "rgba(0,0,0,0.87)",
                                    "cursor": "pointer",
                                    "fontSize": 16,
                                    "marginLeft": 20,
                                  }
                                }
                              >
                                <div
                                  className="cancelButton"
                                  onClick={[Function]}
                                  style={
                                    Object {
                                      "color": "rgba(0,0,0,0.87)",
                                      "cursor": "pointer",
                                      "display": "flex",
                                      "flexDirection": "column",
                                      "fontSize": 16,
                                      "marginLeft": 20,
                                    }
                                  }
                                >
                                  ×
                                </div>
                              </View>
                            </Text>
                          </div>
                        </View>
                      </ListItem>
                      <ListItem
                        key="1"
                        onCancel={[Function]}
                      >
                        <View
                          className="ListItem"
                          style={
                            Object {
                              "alignItems": "center",
                              "borderRadius": 4,
                              "boxShadow": "0px 0px 3px 3px rgba(0,0,0,0.2)",
                              "flexDirection": "row",
                              "justifyContent": "space-between",
                              "margin": 20,
                              "marginBottom": 10,
                              "marginTop": 10,
                              "padding": 20,
                              "zIndex": 1,
                            }
                          }
                        >
                          <div
                            className="ListItem"
                            style={
                              Object {
                                "alignItems": "center",
                                "borderRadius": 4,
                                "boxShadow": "0px 0px 3px 3px rgba(0,0,0,0.2)",
                                "display": "flex",
                                "flexDirection": "row",
                                "justifyContent": "space-between",
                                "margin": 20,
                                "marginBottom": 10,
                                "marginTop": 10,
                                "padding": 20,
                                "zIndex": 1,
                              }
                            }
                          >
                            <Text>
                              <View
                                style={
                                  Object {
                                    "color": "rgba(0,0,0,0.87)",
                                    "fontSize": 16,
                                  }
                                }
                              >
                                <div
                                  style={
                                    Object {
                                      "color": "rgba(0,0,0,0.87)",
                                      "display": "flex",
                                      "flexDirection": "column",
                                      "fontSize": 16,
                                    }
                                  }
                                >
                                  item2
                                </div>
                              </View>
                            </Text>
                            <Text
                              className="cancelButton"
                              onClick={[Function]}
                              style={
                                Object {
                                  "cursor": "pointer",
                                  "marginLeft": 20,
                                }
                              }
                            >
                              <View
                                className="cancelButton"
                                onClick={[Function]}
                                style={
                                  Object {
                                    "color": "rgba(0,0,0,0.87)",
                                    "cursor": "pointer",
                                    "fontSize": 16,
                                    "marginLeft": 20,
                                  }
                                }
                              >
                                <div
                                  className="cancelButton"
                                  onClick={[Function]}
                                  style={
                                    Object {
                                      "color": "rgba(0,0,0,0.87)",
                                      "cursor": "pointer",
                                      "display": "flex",
                                      "flexDirection": "column",
                                      "fontSize": 16,
                                      "marginLeft": 20,
                                    }
                                  }
                                >
                                  ×
                                </div>
                              </View>
                            </Text>
                          </div>
                        </View>
                      </ListItem>
                    </div>
                  </View>
                </List>
              </div>
            </View>
          </div>
        </View>
      </Todos>
    </div>
  </View>
</App>
`;

exports[`mount whole component with mocks 2`] = `
<App>
  <View
    className="App"
  >
    <div
      className="App"
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
        }
      }
    >
      <Todos
        data={
          Array [
            "item1",
            "item2",
            "item3",
          ]
        }
        loading={false}
        onAdd={[Function]}
        onRemove={[Function]}
      >
        <View
          className="App"
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(0,0,0,0.1)",
              "height": "100vh",
              "justifyContent": "center",
            }
          }
        >
          <div
            className="App"
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgba(0,0,0,0.1)",
                "display": "flex",
                "flexDirection": "column",
                "height": "100vh",
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderRadius": 6,
                  "boxShadow": "0px 0px 3px 3px rgba(0,0,0,0.1)",
                  "height": 600,
                }
              }
            >
              <div
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "white",
                    "borderRadius": 6,
                    "boxShadow": "0px 0px 3px 3px rgba(0,0,0,0.1)",
                    "display": "flex",
                    "flexDirection": "column",
                    "height": 600,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "flex-end",
                      "flexDirection": "row",
                      "padding": 20,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "alignItems": "flex-end",
                        "display": "flex",
                        "flexDirection": "row",
                        "padding": 20,
                      }
                    }
                  >
                    <Input
                      label="Todo"
                      onChange={[Function]}
                      style={
                        Object {
                          "width": 400,
                        }
                      }
                      value=""
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "flex-start",
                            "display": "flex",
                            "flexDirection": "column",
                          }
                        }
                      >
                        <div
                          style={
                            Object {
                              "alignItems": "flex-start",
                              "display": "flex",
                              "flexDirection": "column",
                            }
                          }
                        >
                          <Text
                            style={
                              Object {
                                "fontSize": 14,
                                "paddingBottom": 4,
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "color": "rgba(0,0,0,0.87)",
                                  "fontSize": 14,
                                  "paddingBottom": 4,
                                }
                              }
                            >
                              <div
                                style={
                                  Object {
                                    "color": "rgba(0,0,0,0.87)",
                                    "display": "flex",
                                    "flexDirection": "column",
                                    "fontSize": 14,
                                    "paddingBottom": 4,
                                  }
                                }
                              >
                                Todo
                              </div>
                            </View>
                          </Text>
                          <input
                            onChange={[Function]}
                            style={
                              Object {
                                "backgroundColor": "white",
                                "border": "solid 2px #9d9fa2",
                                "borderRadius": 4,
                                "fontSize": 24,
                                "height": 48,
                                "paddingLeft": 16,
                                "paddingRight": 16,
                                "width": 400,
                              }
                            }
                            value=""
                          />
                        </div>
                      </View>
                    </Input>
                    <Button
                      label="Add"
                      onClick={[Function]}
                      style={
                        Object {
                          "marginLeft": 20,
                          "width": 100,
                        }
                      }
                    >
                      <button
                        onClick={[Function]}
                        style={
                          Object {
                            "backgroundColor": "#017acd",
                            "borderRadius": 6,
                            "height": 54,
                            "marginLeft": 20,
                            "minWidth": 127,
                            "padding": 10,
                            "paddingLeft": 40,
                            "paddingRight": 40,
                            "width": 100,
                          }
                        }
                      >
                        <Text
                          style={
                            Object {
                              "color": "white",
                              "fontSize": 16,
                              "fontWeight": "bold",
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "color": "white",
                                "fontSize": 16,
                                "fontWeight": "bold",
                              }
                            }
                          >
                            <div
                              style={
                                Object {
                                  "color": "white",
                                  "display": "flex",
                                  "flexDirection": "column",
                                  "fontSize": 16,
                                  "fontWeight": "bold",
                                }
                              }
                            >
                              Add
                            </div>
                          </View>
                        </Text>
                      </button>
                    </Button>
                  </div>
                </View>
                <List
                  style={
                    Object {
                      "overflowY": "auto",
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flexDirection": "column",
                        "margin": 20,
                        "marginTop": 0,
                        "overflowY": "auto",
                        "width": "100%",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "display": "flex",
                          "flexDirection": "column",
                          "margin": 20,
                          "marginTop": 0,
                          "overflowY": "auto",
                          "width": "100%",
                        }
                      }
                    >
                      <ListItem
                        key="0"
                        onCancel={[Function]}
                      >
                        <View
                          className="ListItem"
                          style={
                            Object {
                              "alignItems": "center",
                              "borderRadius": 4,
                              "boxShadow": "0px 0px 3px 3px rgba(0,0,0,0.2)",
                              "flexDirection": "row",
                              "justifyContent": "space-between",
                              "margin": 20,
                              "marginBottom": 10,
                              "marginTop": 10,
                              "padding": 20,
                              "zIndex": 1,
                            }
                          }
                        >
                          <div
                            className="ListItem"
                            style={
                              Object {
                                "alignItems": "center",
                                "borderRadius": 4,
                                "boxShadow": "0px 0px 3px 3px rgba(0,0,0,0.2)",
                                "display": "flex",
                                "flexDirection": "row",
                                "justifyContent": "space-between",
                                "margin": 20,
                                "marginBottom": 10,
                                "marginTop": 10,
                                "padding": 20,
                                "zIndex": 1,
                              }
                            }
                          >
                            <Text>
                              <View
                                style={
                                  Object {
                                    "color": "rgba(0,0,0,0.87)",
                                    "fontSize": 16,
                                  }
                                }
                              >
                                <div
                                  style={
                                    Object {
                                      "color": "rgba(0,0,0,0.87)",
                                      "display": "flex",
                                      "flexDirection": "column",
                                      "fontSize": 16,
                                    }
                                  }
                                >
                                  item1
                                </div>
                              </View>
                            </Text>
                            <Text
                              className="cancelButton"
                              onClick={[Function]}
                              style={
                                Object {
                                  "cursor": "pointer",
                                  "marginLeft": 20,
                                }
                              }
                            >
                              <View
                                className="cancelButton"
                                onClick={[Function]}
                                style={
                                  Object {
                                    "color": "rgba(0,0,0,0.87)",
                                    "cursor": "pointer",
                                    "fontSize": 16,
                                    "marginLeft": 20,
                                  }
                                }
                              >
                                <div
                                  className="cancelButton"
                                  onClick={[Function]}
                                  style={
                                    Object {
                                      "color": "rgba(0,0,0,0.87)",
                                      "cursor": "pointer",
                                      "display": "flex",
                                      "flexDirection": "column",
                                      "fontSize": 16,
                                      "marginLeft": 20,
                                    }
                                  }
                                >
                                  ×
                                </div>
                              </View>
                            </Text>
                          </div>
                        </View>
                      </ListItem>
                      <ListItem
                        key="1"
                        onCancel={[Function]}
                      >
                        <View
                          className="ListItem"
                          style={
                            Object {
                              "alignItems": "center",
                              "borderRadius": 4,
                              "boxShadow": "0px 0px 3px 3px rgba(0,0,0,0.2)",
                              "flexDirection": "row",
                              "justifyContent": "space-between",
                              "margin": 20,
                              "marginBottom": 10,
                              "marginTop": 10,
                              "padding": 20,
                              "zIndex": 1,
                            }
                          }
                        >
                          <div
                            className="ListItem"
                            style={
                              Object {
                                "alignItems": "center",
                                "borderRadius": 4,
                                "boxShadow": "0px 0px 3px 3px rgba(0,0,0,0.2)",
                                "display": "flex",
                                "flexDirection": "row",
                                "justifyContent": "space-between",
                                "margin": 20,
                                "marginBottom": 10,
                                "marginTop": 10,
                                "padding": 20,
                                "zIndex": 1,
                              }
                            }
                          >
                            <Text>
                              <View
                                style={
                                  Object {
                                    "color": "rgba(0,0,0,0.87)",
                                    "fontSize": 16,
                                  }
                                }
                              >
                                <div
                                  style={
                                    Object {
                                      "color": "rgba(0,0,0,0.87)",
                                      "display": "flex",
                                      "flexDirection": "column",
                                      "fontSize": 16,
                                    }
                                  }
                                >
                                  item2
                                </div>
                              </View>
                            </Text>
                            <Text
                              className="cancelButton"
                              onClick={[Function]}
                              style={
                                Object {
                                  "cursor": "pointer",
                                  "marginLeft": 20,
                                }
                              }
                            >
                              <View
                                className="cancelButton"
                                onClick={[Function]}
                                style={
                                  Object {
                                    "color": "rgba(0,0,0,0.87)",
                                    "cursor": "pointer",
                                    "fontSize": 16,
                                    "marginLeft": 20,
                                  }
                                }
                              >
                                <div
                                  className="cancelButton"
                                  onClick={[Function]}
                                  style={
                                    Object {
                                      "color": "rgba(0,0,0,0.87)",
                                      "cursor": "pointer",
                                      "display": "flex",
                                      "flexDirection": "column",
                                      "fontSize": 16,
                                      "marginLeft": 20,
                                    }
                                  }
                                >
                                  ×
                                </div>
                              </View>
                            </Text>
                          </div>
                        </View>
                      </ListItem>
                      <ListItem
                        key="2"
                        onCancel={[Function]}
                      >
                        <View
                          className="ListItem"
                          style={
                            Object {
                              "alignItems": "center",
                              "borderRadius": 4,
                              "boxShadow": "0px 0px 3px 3px rgba(0,0,0,0.2)",
                              "flexDirection": "row",
                              "justifyContent": "space-between",
                              "margin": 20,
                              "marginBottom": 10,
                              "marginTop": 10,
                              "padding": 20,
                              "zIndex": 1,
                            }
                          }
                        >
                          <div
                            className="ListItem"
                            style={
                              Object {
                                "alignItems": "center",
                                "borderRadius": 4,
                                "boxShadow": "0px 0px 3px 3px rgba(0,0,0,0.2)",
                                "display": "flex",
                                "flexDirection": "row",
                                "justifyContent": "space-between",
                                "margin": 20,
                                "marginBottom": 10,
                                "marginTop": 10,
                                "padding": 20,
                                "zIndex": 1,
                              }
                            }
                          >
                            <Text>
                              <View
                                style={
                                  Object {
                                    "color": "rgba(0,0,0,0.87)",
                                    "fontSize": 16,
                                  }
                                }
                              >
                                <div
                                  style={
                                    Object {
                                      "color": "rgba(0,0,0,0.87)",
                                      "display": "flex",
                                      "flexDirection": "column",
                                      "fontSize": 16,
                                    }
                                  }
                                >
                                  item3
                                </div>
                              </View>
                            </Text>
                            <Text
                              className="cancelButton"
                              onClick={[Function]}
                              style={
                                Object {
                                  "cursor": "pointer",
                                  "marginLeft": 20,
                                }
                              }
                            >
                              <View
                                className="cancelButton"
                                onClick={[Function]}
                                style={
                                  Object {
                                    "color": "rgba(0,0,0,0.87)",
                                    "cursor": "pointer",
                                    "fontSize": 16,
                                    "marginLeft": 20,
                                  }
                                }
                              >
                                <div
                                  className="cancelButton"
                                  onClick={[Function]}
                                  style={
                                    Object {
                                      "color": "rgba(0,0,0,0.87)",
                                      "cursor": "pointer",
                                      "display": "flex",
                                      "flexDirection": "column",
                                      "fontSize": 16,
                                      "marginLeft": 20,
                                    }
                                  }
                                >
                                  ×
                                </div>
                              </View>
                            </Text>
                          </div>
                        </View>
                      </ListItem>
                    </div>
                  </View>
                </List>
              </div>
            </View>
          </div>
        </View>
      </Todos>
    </div>
  </View>
</App>
`;

exports[`mount whole component with mocks 3`] = `
<App>
  <View
    className="App"
  >
    <div
      className="App"
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
        }
      }
    >
      <Todos
        data={
          Array [
            "item2",
            "item3",
          ]
        }
        loading={false}
        onAdd={[Function]}
        onRemove={[Function]}
      >
        <View
          className="App"
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(0,0,0,0.1)",
              "height": "100vh",
              "justifyContent": "center",
            }
          }
        >
          <div
            className="App"
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgba(0,0,0,0.1)",
                "display": "flex",
                "flexDirection": "column",
                "height": "100vh",
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderRadius": 6,
                  "boxShadow": "0px 0px 3px 3px rgba(0,0,0,0.1)",
                  "height": 600,
                }
              }
            >
              <div
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "white",
                    "borderRadius": 6,
                    "boxShadow": "0px 0px 3px 3px rgba(0,0,0,0.1)",
                    "display": "flex",
                    "flexDirection": "column",
                    "height": 600,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "flex-end",
                      "flexDirection": "row",
                      "padding": 20,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "alignItems": "flex-end",
                        "display": "flex",
                        "flexDirection": "row",
                        "padding": 20,
                      }
                    }
                  >
                    <Input
                      label="Todo"
                      onChange={[Function]}
                      style={
                        Object {
                          "width": 400,
                        }
                      }
                      value=""
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "flex-start",
                            "display": "flex",
                            "flexDirection": "column",
                          }
                        }
                      >
                        <div
                          style={
                            Object {
                              "alignItems": "flex-start",
                              "display": "flex",
                              "flexDirection": "column",
                            }
                          }
                        >
                          <Text
                            style={
                              Object {
                                "fontSize": 14,
                                "paddingBottom": 4,
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "color": "rgba(0,0,0,0.87)",
                                  "fontSize": 14,
                                  "paddingBottom": 4,
                                }
                              }
                            >
                              <div
                                style={
                                  Object {
                                    "color": "rgba(0,0,0,0.87)",
                                    "display": "flex",
                                    "flexDirection": "column",
                                    "fontSize": 14,
                                    "paddingBottom": 4,
                                  }
                                }
                              >
                                Todo
                              </div>
                            </View>
                          </Text>
                          <input
                            onChange={[Function]}
                            style={
                              Object {
                                "backgroundColor": "white",
                                "border": "solid 2px #9d9fa2",
                                "borderRadius": 4,
                                "fontSize": 24,
                                "height": 48,
                                "paddingLeft": 16,
                                "paddingRight": 16,
                                "width": 400,
                              }
                            }
                            value=""
                          />
                        </div>
                      </View>
                    </Input>
                    <Button
                      label="Add"
                      onClick={[Function]}
                      style={
                        Object {
                          "marginLeft": 20,
                          "width": 100,
                        }
                      }
                    >
                      <button
                        onClick={[Function]}
                        style={
                          Object {
                            "backgroundColor": "#017acd",
                            "borderRadius": 6,
                            "height": 54,
                            "marginLeft": 20,
                            "minWidth": 127,
                            "padding": 10,
                            "paddingLeft": 40,
                            "paddingRight": 40,
                            "width": 100,
                          }
                        }
                      >
                        <Text
                          style={
                            Object {
                              "color": "white",
                              "fontSize": 16,
                              "fontWeight": "bold",
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "color": "white",
                                "fontSize": 16,
                                "fontWeight": "bold",
                              }
                            }
                          >
                            <div
                              style={
                                Object {
                                  "color": "white",
                                  "display": "flex",
                                  "flexDirection": "column",
                                  "fontSize": 16,
                                  "fontWeight": "bold",
                                }
                              }
                            >
                              Add
                            </div>
                          </View>
                        </Text>
                      </button>
                    </Button>
                  </div>
                </View>
                <List
                  style={
                    Object {
                      "overflowY": "auto",
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flexDirection": "column",
                        "margin": 20,
                        "marginTop": 0,
                        "overflowY": "auto",
                        "width": "100%",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "display": "flex",
                          "flexDirection": "column",
                          "margin": 20,
                          "marginTop": 0,
                          "overflowY": "auto",
                          "width": "100%",
                        }
                      }
                    >
                      <ListItem
                        key="0"
                        onCancel={[Function]}
                      >
                        <View
                          className="ListItem"
                          style={
                            Object {
                              "alignItems": "center",
                              "borderRadius": 4,
                              "boxShadow": "0px 0px 3px 3px rgba(0,0,0,0.2)",
                              "flexDirection": "row",
                              "justifyContent": "space-between",
                              "margin": 20,
                              "marginBottom": 10,
                              "marginTop": 10,
                              "padding": 20,
                              "zIndex": 1,
                            }
                          }
                        >
                          <div
                            className="ListItem"
                            style={
                              Object {
                                "alignItems": "center",
                                "borderRadius": 4,
                                "boxShadow": "0px 0px 3px 3px rgba(0,0,0,0.2)",
                                "display": "flex",
                                "flexDirection": "row",
                                "justifyContent": "space-between",
                                "margin": 20,
                                "marginBottom": 10,
                                "marginTop": 10,
                                "padding": 20,
                                "zIndex": 1,
                              }
                            }
                          >
                            <Text>
                              <View
                                style={
                                  Object {
                                    "color": "rgba(0,0,0,0.87)",
                                    "fontSize": 16,
                                  }
                                }
                              >
                                <div
                                  style={
                                    Object {
                                      "color": "rgba(0,0,0,0.87)",
                                      "display": "flex",
                                      "flexDirection": "column",
                                      "fontSize": 16,
                                    }
                                  }
                                >
                                  item2
                                </div>
                              </View>
                            </Text>
                            <Text
                              className="cancelButton"
                              onClick={[Function]}
                              style={
                                Object {
                                  "cursor": "pointer",
                                  "marginLeft": 20,
                                }
                              }
                            >
                              <View
                                className="cancelButton"
                                onClick={[Function]}
                                style={
                                  Object {
                                    "color": "rgba(0,0,0,0.87)",
                                    "cursor": "pointer",
                                    "fontSize": 16,
                                    "marginLeft": 20,
                                  }
                                }
                              >
                                <div
                                  className="cancelButton"
                                  onClick={[Function]}
                                  style={
                                    Object {
                                      "color": "rgba(0,0,0,0.87)",
                                      "cursor": "pointer",
                                      "display": "flex",
                                      "flexDirection": "column",
                                      "fontSize": 16,
                                      "marginLeft": 20,
                                    }
                                  }
                                >
                                  ×
                                </div>
                              </View>
                            </Text>
                          </div>
                        </View>
                      </ListItem>
                      <ListItem
                        key="1"
                        onCancel={[Function]}
                      >
                        <View
                          className="ListItem"
                          style={
                            Object {
                              "alignItems": "center",
                              "borderRadius": 4,
                              "boxShadow": "0px 0px 3px 3px rgba(0,0,0,0.2)",
                              "flexDirection": "row",
                              "justifyContent": "space-between",
                              "margin": 20,
                              "marginBottom": 10,
                              "marginTop": 10,
                              "padding": 20,
                              "zIndex": 1,
                            }
                          }
                        >
                          <div
                            className="ListItem"
                            style={
                              Object {
                                "alignItems": "center",
                                "borderRadius": 4,
                                "boxShadow": "0px 0px 3px 3px rgba(0,0,0,0.2)",
                                "display": "flex",
                                "flexDirection": "row",
                                "justifyContent": "space-between",
                                "margin": 20,
                                "marginBottom": 10,
                                "marginTop": 10,
                                "padding": 20,
                                "zIndex": 1,
                              }
                            }
                          >
                            <Text>
                              <View
                                style={
                                  Object {
                                    "color": "rgba(0,0,0,0.87)",
                                    "fontSize": 16,
                                  }
                                }
                              >
                                <div
                                  style={
                                    Object {
                                      "color": "rgba(0,0,0,0.87)",
                                      "display": "flex",
                                      "flexDirection": "column",
                                      "fontSize": 16,
                                    }
                                  }
                                >
                                  item3
                                </div>
                              </View>
                            </Text>
                            <Text
                              className="cancelButton"
                              onClick={[Function]}
                              style={
                                Object {
                                  "cursor": "pointer",
                                  "marginLeft": 20,
                                }
                              }
                            >
                              <View
                                className="cancelButton"
                                onClick={[Function]}
                                style={
                                  Object {
                                    "color": "rgba(0,0,0,0.87)",
                                    "cursor": "pointer",
                                    "fontSize": 16,
                                    "marginLeft": 20,
                                  }
                                }
                              >
                                <div
                                  className="cancelButton"
                                  onClick={[Function]}
                                  style={
                                    Object {
                                      "color": "rgba(0,0,0,0.87)",
                                      "cursor": "pointer",
                                      "display": "flex",
                                      "flexDirection": "column",
                                      "fontSize": 16,
                                      "marginLeft": 20,
                                    }
                                  }
                                >
                                  ×
                                </div>
                              </View>
                            </Text>
                          </div>
                        </View>
                      </ListItem>
                    </div>
                  </View>
                </List>
              </div>
            </View>
          </div>
        </View>
      </Todos>
    </div>
  </View>
</App>
`;

exports[`renders without crashing 1`] = `
<View
  className="App"
>
  <Todos
    data={Array []}
    loading={false}
    onAdd={[Function]}
    onRemove={[Function]}
  />
</View>
`;
